[project]
name = "introducao-dev-web"
package-mode = false
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Lopes", email = "gabriel.ldbrito@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)",
    "pyjwt (>=2.12.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"